# solar_system_newtonian_dynamics

./: .gitignore  README.md  pyproject.toml
scripts/: example.py  main.py
src/solar_system_newtonian_dynamics/: N_body_newmark.py
